--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "devDependencies": {
+    "@symfony/webpack-encore": "^5.0.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.1",
+    "tailwindcss": "^3.4.16",
+    "webpack-notifier": "^1.15.0"
+  },
+  "dependencies": {
+    "flowbite": "^2.5.2"
+  },
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
   }
 }
