--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,8 +4,9 @@ framework:
     #csrf_protection: true
 
     # Note that the session will be started ONLY if you read or write from it.
-    session: true
-
+    session:
+        handler_id: null
+        cookie_secure: auto
     #esi: true
     #fragments: true
 
