--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,6 @@
 security:
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: auto
 
     providers:
         app_user_provider:
@@ -9,9 +9,6 @@ security:
                 property: email
 
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
         main:
             lazy: true
             provider: app_user_provider
@@ -20,9 +17,15 @@ security:
                 check_path: app_login
                 enable_csrf: true
                 default_target_path: app_home
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 7 jours
+                path: /
             logout:
                 path: app_logout
                 target: app_login
+            # Ajoutez cette ligne pour activer la session
+            stateless: false
 
     access_control:
-        
+
