--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
+    "core-js": "^3.39.0",
     "flowbite": "^2.5.2"
   },
   "scripts": {
