--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,12 +18,11 @@ security:
                 enable_csrf: true
             remember_me:
                 secret: '%kernel.secret%'
-                lifetime: 604800 # 7 jours
+                lifetime: 604800
                 path: /
             logout:
                 path: app_logout
                 target: app_login
-            # Ajoutez cette ligne pour activer la session
             stateless: false
 
     access_control:
